Fix the incorrect spacing unit

--- a/styles/_uswds-theme-custom-styles.scss
+++ b/styles/_uswds-theme-custom-styles.scss
@@ -757,15 +757,15 @@ CHECKLIST
   background-repeat: no-repeat;
   background-size: 150px auto;
   background-position: right units(2.5) top units(2); // 20px from right
-}
+
 
   @media (max-width: 639px) {
     background-image: none;
   }
-
+}
 
 .domain-avail-search p {
-    padding-right: units(12);       // room for background image
+    padding-right: units(10);       // room for background image
 }
 
 .usa-prose .domain-avail-search > p {
